# manipulator

./: CMakeLists.txt  README.md  keyssh.pub  package.xml
config/: controllers.yaml
description/: manipulator.control.xacro  manipulator.urdf.xacro  panda_arm.xacro  panda_hand.xacro
include/: collision_detection_env.hpp
launch/: inRviz.launch.py  launch.py  rviz.launch.py  simulation.launch.py
manipulator/: __init__.py  controller.py  dmp_generator.py  file.txt  kdl_parser.py  load_dmps.py  load_rl.py  robot_traj_gen.py  trajectory_mapping.py
manipulator/rl/: env_dmp_obstacle.py  env_dmp_obstacle_via_points.py  env_traj.py  nn.py  train.py
manipulator/rl/saved_models/: EP.pt  sac_actor_EP0.pt  sac_actor_EP1.pt  sac_actor_EP10.pt  sac_actor_EP100.pt  sac_actor_EP1000.pt  sac_actor_EP1001.pt  sac_actor_EP1002.pt  sac_actor_EP1003.pt  sac_actor_EP1004.pt  sac_actor_EP1005.pt  sac_actor_EP1006.pt  sac_actor_EP1007.pt  sac_actor_EP1008.pt  sac_actor_EP1009.pt  sac_actor_EP101.pt  sac_actor_EP1010.pt  sac_actor_EP1011.pt  sac_actor_EP1012.pt  sac_actor_EP1013.pt  sac_actor_EP1014.pt  sac_actor_EP1015.pt  sac_actor_EP1016.pt  sac_actor_EP1017.pt  sac_actor_EP1018.pt  sac_actor_EP1019.pt  sac_actor_EP102.pt  sac_actor_EP1020.pt  sac_actor_EP1021.pt  sac_actor_EP1022.pt  sac_actor_EP1023.pt  sac_actor_EP1024.pt  sac_actor_EP1025.pt  sac_actor_EP1026.pt  sac_actor_EP1027.pt  sac_actor_EP1028.pt  sac_actor_EP1029.pt  sac_actor_EP103.pt  sac_actor_EP1030.pt  sac_actor_EP1031.pt  (+2066 more)
resource/: dmps.mpx  world
resource/description/: manipulator.urdf  panda_arm.xacro  panda_hand.xacro
resource/dmp/: 6dmp.csv  discrete.yaml  traj_geral_1.csv
resources/controllers/: controllers.yaml
resources/dmp/: 3dmp.csv  discrete.yaml
resources/dmp/dmp_output/: ang.csv  dmpRL.mpx  dmps.mpx  dmps.mpx:Zone.Identifier  xyz.csv
resources/robot_description/: manipulator.control.xacro  manipulator.gazebo.xacro  manipulator.urdf  manipulator.urdf.xacro  panda_arm.xacro  panda_hand.xacro  panda_ros2_control.xacro
resources/worlds/: empty_world.xml  world.xml
src/: collision_detection_env.cpp  run_cd.cpp
