<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator</name>
  <version>0.0.0</version>
  <description>Franka Emika Panda manipulator</description>
  <maintainer email="luiscoelho321@hotmail.com">Luís Coelho</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo-ros2-control</depend>
  <depend>urdf</depend>
  <depend>std_msgs</depend>
  
  <build_depend>fcl</build_depend>
  <build_depend>assimp</build_depend>
  <build_depend>libccd</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>